--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u794158688_hris_happy
 DB_USERNAME=u794158688_hris_happy
-DB_PASSWORD=NgentotAnjingBangsat!#21
+DB_PASSWORD='NgentotAnjingBangsat!#21'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
