--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^5.1",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.5",
         "spatie/laravel-medialibrary": "^11.8",
         "spatie/laravel-permission": "^6.9",
         "yajra/laravel-datatables": "^10.1"
