--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^4.5",
         "spatie/laravel-medialibrary": "^11.8",
         "spatie/laravel-permission": "^6.9",
+        "stevebauman/location": "^7.3",
         "yajra/laravel-datatables": "^10.1"
     },
     "require-dev": {
