--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,20 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=u794158688_hris_happy
-DB_USERNAME=u794158688_hris_happy
-DB_PASSWORD='NgentotAnjingBangsat!#21'
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=u794158688_hris_happy
+# DB_USERNAME=u794158688_hris_happy
+# DB_PASSWORD='NgentotAnjingBangsat!#21'
+
+DB_CONNECTION=pgsql
+DB_HOST=103.157.96.216
+DB_PORT=5432
+DB_DATABASE=happy_hr
+DB_USERNAME=postgres
+DB_PASSWORD=r4h4514
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
