kutau kau hanya

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=103.157.96.216
 DB_PORT=5432
-DB_DATABASE=happy_hr
+DB_DATABASE=happy_hris
 DB_USERNAME=postgres
 DB_PASSWORD=r4h4514
 
